--- a/gesture_recognition.ipynb
+++ b/gesture_recognition.ipynb
@@ -724,7 +724,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def df_to_nparray(df):\n",
@@ -796,7 +798,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -806,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +829,7 @@
        "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,6 +839,11 @@
     "\n",
     "svm_clf = svm.SVC(gamma=0.001)\n",
     "svm_clf.fit(X_test, Y_test)\n",
+    "\n",
+    "import pickle\n",
+    "dmp = pickle.dump(svm_clf, open('model.json', 'wb'))\n",
+    "\n",
+    "\n",
     "print('accuracy : ', svm_clf.score(X_test, Y_test) * 100, '%')\n",
     "svm_clf"
    ]
@@ -888,13 +897,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### poor datasets need to generalize"
+   ]
   }
  ],
  "metadata": {
